# grepapk

./: .gitignore  Enhanced_Tiny_Scan_JSON_Test.json  Enhanced_Tiny_Scan_Test.txt  INSTALLATION.md  INSTALLATION_SUMMARY.md  MANIFEST.in  README.md  banner.txt  grepapk.py  install.py  install_cross_platform.py  install_unix.sh  install_windows.bat  pyproject.toml  requirements.txt  setup.py  test_installation.py
config/: __init__.py  ai_scanner.py  ai_vulnerability_detector.py  grepapk_main.py  help_banner.py  output_manager.py  rasp_detector.py  regex_scanner_enhanced.py  vulnerability_patterns.py
files/: banner.txt
